--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-depracated.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-depracated.scss
@@ -1,4 +1,6 @@
 // Bootstrap deprecated functions
+@use "sass:map";
+
 @mixin alert-variant($background, $border, $color) {
   --#{$prefix}alert-color: #{$color};
   --#{$prefix}alert-bg: #{$background};
@@ -15,7 +17,7 @@
 }
 
 @function theme-color-level($color-name: "primary", $level: 0) {
-  $color: map-get($theme-colors, $color-name);
+  $color: map.get($theme-colors, $color-name);
   $color-base: if($level > 0, #000, #fff);
   $level: abs($level);
 
