ref: $elasticms- variables

--- a/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
@@ -219,7 +219,7 @@ div.media-lib {
         height: 100%;
 
         &.media-lib-drop-area {
-            // border: 2px solid $elasticms_light_blue;
+            // border: 2px solid $elasticms-light-blue;
             background-color:  rgb(0 167 226 / 10%);
         }
 
