--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
@@ -4,12 +4,12 @@
 
 // COLORS
 // --------------------------------------------------------
-$elasticms_pink: #EF79AC;
-$elasticms_yellow: #D5B90B;
-$elasticms_light_blue: #00A7E2;
-$elasticms_dark_blue: #117bbb;
-$elasticms_lagoon: #00BCB1;
-$elasticms_green: #A5D13C;
+$elasticms-pink: #EF79AC;
+$elasticms-yellow: #D5B90B;
+$elasticms-light-blue: #00A7E2;
+$elasticms-dark-blue: #117bbb;
+$elasticms-lagoon: #00BCB1;
+$elasticms-green: #A5D13C;
 $blue: #0073b7 !default;
 $lightblue: #3c8dbc !default;
 $navy: #001f3f !default;
