--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-depracated.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-depracated.scss
@@ -1,5 +1,6 @@
 // Bootstrap deprecated functions
 @use "sass:map";
+@use "sass:math";
 
 @mixin alert-variant($background, $border, $color) {
   --#{$prefix}alert-color: #{$color};
@@ -19,7 +20,7 @@
 @function theme-color-level($color-name: "primary", $level: 0) {
   $color: map.get($theme-colors, $color-name);
   $color-base: if($level > 0, #000, #fff);
-  $level: abs($level);
+  $level: math.abs($level);
 
   @return mix($color-base, $color, $level * $theme-color-interval);
 }
