fix: scss/at-extend-no-missing-placeholder

--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_close.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_close.scss
@@ -1,4 +1,4 @@
-.close {
+%close {
   float: right;
 
   @include font-size($close-font-size);
@@ -26,6 +26,10 @@
   &:focus {
     outline: none;
   }
+}
+
+.close {
+  @extend %close;
 }
 
 // Additional properties for button version
