--- a/EMS/admin-ui-bundle/assets/css/fontawsome.scss
+++ b/EMS/admin-ui-bundle/assets/css/fontawsome.scss
@@ -3,20 +3,23 @@
 $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts/";
 
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/functions";
+@import "@fortawesome/fontawesome-free/scss/variables";
+@import "@fortawesome/fontawesome-free/scss/mixins";
 @import "@fortawesome/fontawesome-free/scss/solid";
 @import "@fortawesome/fontawesome-free/scss/regular";
 @import "@fortawesome/fontawesome-free/scss/brands";
 
 // Hotfixes map old fa classes
 .fa-keyboard-o {
-  @extend .fa-keyboard;
+  @include fa-icon-solid($fa-var-keyboard);
 }
 
 .fa-file-text-o {
-  @extend .fa-file-text;
+  @include fa-icon-solid($fa-var-file-text);
 }
 
 .fa-calendar-o {
-  @extend .fa-calendar;
+  @include fa-icon-solid($fa-var-calendar-alt);
 }
 
