--- a/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
@@ -99,8 +99,9 @@ div.media-lib {
       }
 
       li:not(:last-child)::after {
-        font-family: "Font Awesome 6 Free";
+        font-family: $fa-style-family;
         content: fa-content($fa-var-angles-right);
+        font-weight: 900;
         color: #777;
       }
     }
@@ -152,7 +153,7 @@ div.media-lib {
               padding: 8px;
 
               &::before {
-                font-family: "Font Awesome 6 Free";
+                font-family: $fa-style-family;
                 content: fa-content($fa-var-folder);
                 margin-right: 8px;
               }
@@ -166,11 +167,12 @@ div.media-lib {
 
             &.media-lib-folder-children {
               & > button.media-lib-link-folder::after {
-                font-family: "Font Awesome 6 Free";
-                content: fa-content($fa-var-angles-left);
+                font-family: $fa-style-family;
+                content: fa-content($fa-var-angle-left);
                 margin-right: 8px;
                 color: #777;
                 float: right;
+                font-weight: 900;
               }
             }
 
@@ -185,6 +187,7 @@ div.media-lib {
 
               & > button.media-lib-link-folder::after {
                 content: fa-content($fa-var-angle-down);
+                font-weight: 900;
               }
 
               & > ul {
@@ -219,8 +222,8 @@ div.media-lib {
         height: 100%;
 
         &.media-lib-drop-area {
-            // border: 2px solid $elasticms-light-blue;
-            background-color:  rgb(0 167 226 / 10%);
+          // border: 2px solid $elasticms-light-blue;
+          background-color:  rgb(0 167 226 / 10%);
         }
 
         ul.media-lib-list-uploads {
@@ -266,15 +269,15 @@ div.media-lib {
     }
 
     div.media-lib-load-more {
-        &.show-load-more { display: flex; }
+      &.show-load-more { display: flex; }
 
-        display: none;
-        color: #777;
-        justify-content: center;
-        align-items: center;
-        column-gap: 8px;
-        padding: 16px 16px 64px;
-        font-weight: bold;
+      display: none;
+      color: #777;
+      justify-content: center;
+      align-items: center;
+      column-gap: 8px;
+      padding: 16px 16px 64px;
+      font-weight: bold;
     }
   }
 }
