--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_navs.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_navs.scss
@@ -1,13 +1,14 @@
-//
 // Component: Nav
-//
+
+@use "sass:color";
+@use "sass:map";
 
 .nav-pills {
   .nav-link {
     color: $gray-600;
 
     &:not(.active):hover {
-      color: map-get($theme-colors, "primary");
+      color: map.get($theme-colors, "primary");
     }
   }
 
@@ -82,7 +83,7 @@
       background-color: $value;
 
       @if $color == dark {
-        border-color: lighten($dark, 10%);
+        border-color: color.adjust($dark, $lightness: 10%);
       }
     }
   }
@@ -118,17 +119,17 @@
   }
 
   .nav-tabs {
-    border-color: lighten($dark, 15%);
+    border-color: color.adjust($dark, $lightness: 15%);
 
     .nav-link:focus,
     .nav-link:hover {
-      border-color: lighten($dark, 15%);
+      border-color: color.adjust($dark, $lightness: 15%);
     }
 
     .nav-item.show .nav-link,
     .nav-link.active {
       background-color: $dark;
-      border-color: lighten($dark, 15%) lighten($dark, 15%) transparent lighten($dark, 15%);
+      border-color: color.adjust($dark, $lightness: 15%) color.adjust($dark, $lightness: 15%) transparent color.adjust($dark, $lightness: 15%);
       color: $white;
     }
 
@@ -138,23 +139,23 @@
         &.active,
         &:focus,
         &:hover {
-          border-color: lighten($dark, 15%) transparent lighten($dark, 15%) lighten($dark, 15%);
+          border-color: color.adjust($dark, $lightness: 15%) transparent color.adjust($dark, $lightness: 15%) color.adjust($dark, $lightness: 15%);
         }
 
         &:focus,
         &:hover {
-          background-color: lighten($dark, 5%);
+          background-color: color.adjust($dark, $lightness: 5%);
         }
       }
 
       &.nav-tabs-right {
-        border-color: lighten($dark, 15%);
+        border-color: color.adjust($dark, $lightness: 15%);
 
         .nav-link {
           &.active,
           &:focus,
           &:hover {
-            border-color: lighten($dark, 15%) lighten($dark, 15%) lighten($dark, 15%) transparent;
+            border-color: color.adjust($dark, $lightness: 15%) color.adjust($dark, $lightness: 15%) color.adjust($dark, $lightness: 15%) transparent;
           }
         }
       }
@@ -168,7 +169,7 @@
         background-color: $value;
 
         @if $color == dark {
-          border-color: lighten($dark, 10%);
+          border-color: color.adjust($dark, $lightness: 10%);
         }
       }
     }
