--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_cards.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_cards.scss
@@ -1,6 +1,6 @@
-//
 // Mixins: Cards Variant
-//
+
+@use "sass:color";
 
 @mixin cards-variant($name, $color) {
   .card-#{$name} {
@@ -64,7 +64,7 @@
       table td.hour:hover,
       table td.minute:hover,
       table td.second:hover {
-        background-color: darken($color, 8%);
+        background-color: color.adjust($color, $lightness: -8%);
         color: color-contrast($color);
       }
 
@@ -74,7 +74,7 @@
 
       table td.active,
       table td.active:hover {
-        background-color: lighten($color, 10%);
+        background-color: color.adjust($color, $lightness: 10%);
         color: color-contrast($color);
       }
     }
