--- a/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_mailbox.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_mailbox.scss
@@ -1,6 +1,4 @@
-//
 // Pages: Mailbox
-//
 
 .mailbox-messages {
   > .table {
@@ -96,5 +94,5 @@
 }
 
 .mailbox-attachment-close {
-  @extend .close;
+  @extend %close;
 }
