--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_bootstrap-slider.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_bootstrap-slider.scss
@@ -1,6 +1,6 @@
-//
 // Plugin: Bootstrap Slider
-//
+
+@use "sass:color";
 
 // Tooltip fix
 .slider .tooltip.in {
@@ -37,7 +37,7 @@
 
 @include dark-mode {
   .slider-track {
-    background-color: lighten($dark, 10%);
+    background-color: color.adjust($dark, $lightness: 10%);
     background-image: none;
   }
 
