--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_alerts.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_alerts.scss
@@ -1,6 +1,6 @@
-//
 // Component: Alert
-//
+
+@use "sass:color";
 
 .alert {
   .icon {
@@ -22,12 +22,12 @@
   }
 }
 
-//Alert Variants
+// Alert Variants
 @each $color, $value in $theme-colors {
   .alert-#{$color} {
     color: color-contrast($value);
     background-color: $value;
-    border-color: darken($value, 5%);
+    border-color: color.adjust($value, $lightness: -5%);
   }
 
   .alert-default-#{$color} {
@@ -40,7 +40,7 @@
     .alert-#{$color} {
       color: color-contrast($value);
       background-color: $value;
-      border-color: darken($value, 5%);
+      border-color: color.adjust($value, $lightness: -5%);
     }
 
     .alert-default-#{$color} {
@@ -48,5 +48,3 @@
     }
   }
 }
-
-//
