--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_callout.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_callout.scss
@@ -1,6 +1,7 @@
-//
 // Component: Callout
-//
+
+@use "sass:color";
+@use "sass:map";
 
 // Base styles (regardless of theme)
 .callout {
@@ -9,14 +10,14 @@
   }
 
   @if $enable-shadows {
-    box-shadow: map-get($elevations, 1);
+    box-shadow: map.get($elevations, 1);
   } @else {
     border: 1px solid $gray-300;
   }
 
   background-color: $white;
   border-left: 5px solid $gray-200;
-  margin-bottom: map-get($spacers, 3);
+  margin-bottom: map.get($spacers, 3);
   padding: 1rem;
 
   a {
@@ -34,40 +35,40 @@
 
   // Themes for different contexts
   &.callout-danger {
-    border-left-color: darken(map-get($theme-colors, "danger"), 10%);
+    border-left-color: color.adjust(map.get($theme-colors, "danger"), $lightness: -10%);
   }
 
   &.callout-warning {
-    border-left-color: darken(map-get($theme-colors, "warning"), 10%);
+    border-left-color: color.adjust(map.get($theme-colors, "warning"), $lightness: -10%);
   }
 
   &.callout-info {
-    border-left-color: darken(map-get($theme-colors, "info"), 10%);
+    border-left-color: color.adjust(map.get($theme-colors, "info"), $lightness: -10%);
   }
 
   &.callout-success {
-    border-left-color: darken(map-get($theme-colors, "success"), 10%);
+    border-left-color: color.adjust(map.get($theme-colors, "success"), $lightness: -10%);
   }
 }
 
 @include dark-mode {
   .callout {
-    background-color: lighten($dark, 5%);
+    background-color: color.adjust($dark, $lightness: 5%);
 
     &.callout-danger {
-      border-left-color: lighten($danger-alt, 10%);
+      border-left-color: color.adjust($danger-alt, $lightness: 10%);
     }
 
     &.callout-warning {
-      border-left-color: lighten($warning-alt, 10%);
+      border-left-color: color.adjust($warning-alt, $lightness: 10%);
     }
 
     &.callout-info {
-      border-left-color: lighten($info-alt, 10%);
+      border-left-color: color.adjust($info-alt, $lightness: 10%);
     }
 
     &.callout-success {
-      border-left-color: lighten($success-alt, 10%);
+      border-left-color: color.adjust($success-alt, $lightness: 10%);
     }
   }
 }
