--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_direct-chat.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_direct-chat.scss
@@ -1,6 +1,6 @@
-//
 // Component: Direct Chat
-//
+
+@use "sass:color";
 
 .direct-chat {
   .card-body {
@@ -18,13 +18,13 @@
 
   &.timestamp-light {
     .direct-chat-timestamp {
-      color: lighten(color-contrast($yiq-text-light), 10%);
+      color: color.adjust(color-contrast($yiq-text-light), $lightness: 10%);
     }
   }
 
   &.timestamp-dark {
     .direct-chat-timestamp {
-      color: darken(color-contrast($yiq-text-dark), 20%);
+      color: color.adjust(color-contrast($yiq-text-dark), $lightness: -20%);
     }
   }
 }
@@ -65,7 +65,7 @@
   padding: 5px 10px;
   position: relative;
 
-  //Create the arrow
+  // Create the arrow
   &::after,
   &::before {
     border: solid transparent;
@@ -126,10 +126,10 @@
 }
 
 .direct-chat-timestamp {
-  color: darken($gray-500, 25%);
+  color: color.adjust($gray-500, $lightness: -25%);
 }
 
-//Direct chat contacts pane
+// Direct chat contacts pane
 .direct-chat-contacts-open {
   .direct-chat-contacts {
     @include translate(0, 0);
@@ -161,11 +161,11 @@
   }
 
   .contacts-list-msg {
-    color: darken($gray-600, 10%);
+    color: color.adjust($gray-600, $lightness: -10%);
   }
 }
 
-//Contacts list -- for displaying contacts in direct chat contacts pane
+// Contacts list -- for displaying contacts in direct chat contacts pane
 .contacts-list {
   @include list-unstyled;
 
@@ -213,7 +213,7 @@
 }
 
 .contacts-list-msg {
-  color: darken($gray-400, 10%);
+  color: color.adjust($gray-400, $lightness: -10%);
 }
 
 // Color variants
@@ -231,13 +231,13 @@
 
 @include dark-mode {
   .direct-chat-text {
-    background-color: lighten($dark, 7.5%);
-    border-color: lighten($dark, 10%);
+    background-color: color.adjust($dark, $lightness: 7.5%);
+    border-color: color.adjust($dark, $lightness: 10%);
     color: $white;
 
     &::after,
     &::before {
-      border-right-color: lighten($dark, 10%);
+      border-right-color: color.adjust($dark, $lightness: 10%);
     }
   }
 
