--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
@@ -1,6 +1,7 @@
-//
 // Component: Forms
-//
+
+@use "sass:color";
+@use "sass:map";
 
 .form-group {
   &.has-icon {
@@ -115,7 +116,7 @@ label:not(.form-check-label, .custom-file-label) {
 .warning-feedback {
   @include font-size($form-feedback-font-size);
 
-  color: map-get($theme-colors, "warning");
+  color: map.get($theme-colors, "warning");
   display: none;
   margin-top: $form-feedback-margin-top;
   width: 100%;
@@ -125,8 +126,8 @@ label:not(.form-check-label, .custom-file-label) {
   @include border-radius($form-feedback-tooltip-border-radius);
   @include font-size($form-feedback-tooltip-font-size);
 
-  background-color: rgba(map-get($theme-colors, "warning"), $form-feedback-tooltip-opacity);
-  color: color-contrast(map-get($theme-colors, "warning"));
+  background-color: rgba(map.get($theme-colors, "warning"), $form-feedback-tooltip-opacity);
+  color: color-contrast(map.get($theme-colors, "warning"));
   display: none;
   line-height: $form-feedback-tooltip-line-height;
   margin-top: .1rem;
@@ -139,7 +140,7 @@ label:not(.form-check-label, .custom-file-label) {
 
 .form-control {
   &.is-warning {
-    border-color: map-get($theme-colors, "warning");
+    border-color: map.get($theme-colors, "warning");
 
     @if $enable-validation-icons {
       // padding-right: $input-height-inner;
@@ -150,8 +151,8 @@ label:not(.form-check-label, .custom-file-label) {
     }
 
     &:focus {
-      border-color: map-get($theme-colors, "warning");
-      box-shadow: 0 0 0 $input-focus-width rgba(map-get($theme-colors, "warning"), .25);
+      border-color: map.get($theme-colors, "warning");
+      box-shadow: 0 0 0 $input-focus-width rgba(map.get($theme-colors, "warning"), .25);
     }
 
     ~ .warning-feedback,
@@ -173,7 +174,7 @@ textarea.form-control {
 
 .custom-select {
   &.is-warning {
-    border-color: map-get($theme-colors, "warning");
+    border-color: map.get($theme-colors, "warning");
 
     @if $enable-validation-icons {
       // padding-right: $custom-select-feedback-icon-padding-right;
@@ -181,8 +182,8 @@ textarea.form-control {
     }
 
     &:focus {
-      border-color: map-get($theme-colors, "warning");
-      box-shadow: 0 0 0 $input-focus-width rgba(map-get($theme-colors, "warning"), .25);
+      border-color: map.get($theme-colors, "warning");
+      box-shadow: 0 0 0 $input-focus-width rgba(map.get($theme-colors, "warning"), .25);
     }
 
     ~ .warning-feedback,
@@ -205,7 +206,7 @@ textarea.form-control {
 .form-check-input {
   &.is-warning {
     ~ .form-check-label {
-      color: map-get($theme-colors, "warning");
+      color: map.get($theme-colors, "warning");
     }
 
     ~ .warning-feedback,
@@ -217,10 +218,10 @@ textarea.form-control {
 
 .custom-control-input.is-warning {
   ~ .custom-control-label {
-    color: map-get($theme-colors, "warning");
+    color: map.get($theme-colors, "warning");
 
     &::before {
-      border-color: map-get($theme-colors, "warning");
+      border-color: map.get($theme-colors, "warning");
     }
   }
 
@@ -231,19 +232,19 @@ textarea.form-control {
 
   &:checked {
     ~ .custom-control-label::before {
-      @include gradient-bg(lighten(map-get($theme-colors, "warning"), 10%));
+      @include gradient-bg(color.adjust(map.get($theme-colors, "warning"), $lightness: 10%));
 
-      border-color: lighten(map-get($theme-colors, "warning"), 10%);
+      border-color: color.adjust(map.get($theme-colors, "warning"), $lightness: 10%);
     }
   }
 
   &:focus {
     ~ .custom-control-label::before {
-      box-shadow: 0 0 0 $input-focus-width rgba(map-get($theme-colors, "warning"), .25);
+      box-shadow: 0 0 0 $input-focus-width rgba(map.get($theme-colors, "warning"), .25);
     }
 
     &:not(:checked) ~ .custom-control-label::before {
-      border-color: map-get($theme-colors, "warning");
+      border-color: map.get($theme-colors, "warning");
     }
   }
 }
@@ -252,7 +253,7 @@ textarea.form-control {
 .custom-file-input {
   &.is-warning {
     ~ .custom-file-label {
-      border-color: map-get($theme-colors, "warning");
+      border-color: map.get($theme-colors, "warning");
     }
 
     ~ .warning-feedback,
@@ -262,8 +263,8 @@ textarea.form-control {
 
     &:focus {
       ~ .custom-file-label {
-        border-color: map-get($theme-colors, "warning");
-        box-shadow: 0 0 0 $input-focus-width rgba(map-get($theme-colors, "warning"), .25);
+        border-color: map.get($theme-colors, "warning");
+        box-shadow: 0 0 0 $input-focus-width rgba(map.get($theme-colors, "warning"), .25);
       }
     }
   }
@@ -341,27 +342,27 @@ body.text-sm {
 .navbar-dark {
   .btn-navbar,
   .form-control-navbar {
-    background-color: lighten($sidebar-dark-bg, 5%);
-    border: 1px solid lighten($sidebar-dark-bg, 15%);
-    color: lighten(color-contrast(lighten($sidebar-dark-bg, 5%)), 15%);
+    background-color: color.adjust($sidebar-dark-bg, $lightness: 5%);
+    border: 1px solid color.adjust($sidebar-dark-bg, $lightness: 15%);
+    color: color.adjust(color-contrast(color.adjust($sidebar-dark-bg, $lightness: 5%)), $lightness: 15%);
   }
 
   .btn-navbar {
     &:hover {
-      background-color: lighten($sidebar-dark-bg, 7.5%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 7.5%);
     }
 
     &:focus {
-      background-color: lighten($sidebar-dark-bg, 10%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 10%);
     }
   }
 
   .form-control-navbar + .input-group-prepend,
   .form-control-navbar + .input-group-append {
     > .btn-navbar {
-      background-color: lighten($sidebar-dark-bg, 5%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 5%);
       color: $white;
-      border: 1px solid lighten($sidebar-dark-bg, 15%);
+      border: 1px solid color.adjust($sidebar-dark-bg, $lightness: 15%);
       border-left: none;
     }
   }
@@ -404,7 +405,7 @@ body.text-sm {
 
   .custom-control-input:disabled ~ .custom-control-label::before,
   .custom-control-input[disabled] ~ .custom-control-label::before {
-    background-color: lighten($dark, 5%);
+    background-color: color.adjust($dark, $lightness: 5%);
     border-color: $gray-600;
     color: $white;
   }
@@ -423,15 +424,15 @@ body.text-sm {
 
   .custom-range {
     &::-webkit-slider-runnable-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     &::-moz-range-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     &::-ms-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     @each $name, $color in $theme-colors-alt {
