--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_info-box.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_info-box.scss
@@ -1,6 +1,5 @@
-//
 // Component: Info Box
-//
+@use "sass:map";
 
 .info-box {
   @include box-shadow($card-shadow);
@@ -8,7 +7,7 @@
 
   background-color: $white;
   display: flex;
-  margin-bottom: map-get($spacers, 3);
+  margin-bottom: map.get($spacers, 3);
   min-height: 80px;
   padding: .5rem;
   position: relative;
