--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_modals.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_modals.scss
@@ -1,6 +1,6 @@
-//
 // Component: Modals
-//
+
+@use "sass:color";
 
 // Overlay
 .modal-dialog {
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba($black, .7);
-    color: darken($gray-600, 2.5%);
+    color: color.adjust($gray-600, $lightness: -2.5%);
 
     @include border-radius($modal-content-border-radius);
   }
