--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_pagination.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_pagination.scss
@@ -1,6 +1,6 @@
-//
 // Component: Pagination
-//
+
+@use "sass:color";
 
 .pagination-month {
   .page-item {
@@ -50,7 +50,7 @@
   .page-item {
     &.disabled a,
     &.disabled .page-link {
-      background-color: lighten($dark, 2.5%) !important;
+      background-color: color.adjust($dark, $lightness: 2.5%) !important;
       border-color: $gray-600 !important;
       color: $gray-600;
     }
@@ -79,8 +79,8 @@
 
         &:hover,
         &:focus {
-          color: lighten($primary-alt, 5%);
-          background-color: lighten($dark, 5%);
+          color: color.adjust($primary-alt, $lightness: 5%);
+          background-color: color.adjust($dark, $lightness: 5%);
         }
       }
     }
