--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_print.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_print.scss
@@ -1,21 +1,23 @@
-//
 // Misc: Print
-//
 
 @media print {
-  //Add to elements that you do not want to show when printing
-  .no-print {
+  // Add to elements that you do not want to show when printing
+  %no-print {
     display: none !important;
   }
 
-  //Elements that we want to hide when printing
+  .no-print {
+    @extend %no-print;
+  }
+
+  // Elements that we want to hide when printing
   .main-sidebar,
   .main-header,
   .content-header {
-    @extend .no-print;
+    @extend %no-print;
   }
 
-  //This is the only element that should appear, so let's remove the margins
+  // This is the only element that should appear, so let's remove the margins
   .content-wrapper,
   .main-footer {
     @include translate(0, 0);
@@ -28,7 +30,7 @@
     padding-top: 0 !important;
   }
 
-  //Invoice printing
+  // Invoice printing
   .invoice {
     border: 0;
     margin: 0;
@@ -38,10 +40,10 @@
 
   .invoice-col {
     float: left;
-    width: 33.3333333%;
+    width: 33.3333%;
   }
 
-  //Make sure table content displays properly
+  // Make sure table content displays properly
   .table-responsive {
     overflow: auto;
 
