--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_users-list.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_users-list.scss
@@ -1,6 +1,6 @@
-//
 // Component: Users List
-//
+
+@use "sass:color";
 
 .users-list {
   @include list-unstyled;
@@ -41,7 +41,7 @@
 }
 
 .users-list-date {
-  color: darken($gray-500, 20%);
+  color: color.adjust($gray-500, $lightness: -20%);
   font-size: 12px;
 }
 
