--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
@@ -1,15 +1,17 @@
-//
 // Core: Variables
-//
+
+@use "sass:color";
+@use "sass:map";
+@use "sass:string";
 
 // COLORS
 // --------------------------------------------------------
-$elasticms_pink: #EF79AC;
-$elasticms_yellow: #D5B90B;
-$elasticms_light_blue: #00A7E2;
-$elasticms_dark_blue: #117bbb;
-$elasticms_lagoon: #00BCB1;
-$elasticms_green: #A5D13C;
+$elasticms-pink: #EF79AC;
+$elasticms-yellow: #D5B90B;
+$elasticms-light-blue: #00A7E2;
+$elasticms-dark-blue: #117bbb;
+$elasticms-lagoon: #00BCB1;
+$elasticms-green: #A5D13C;
 $blue: #0073b7 !default;
 $lightblue: #3c8dbc !default;
 $navy: #001f3f !default;
@@ -22,7 +24,7 @@ $purple: #605ca8 !default;
 $maroon: #d81b60 !default;
 $black: #111 !default;
 $gray-x-light: #d2d6de !default;
-$colors: map-merge(
+$colors: map.merge(
   (
     "lightblue": $lightblue,
     "navy": $navy,
@@ -54,7 +56,7 @@ $boxed-layout-max-width: 1250px !default;
 
 // Body background (Affects main content background only)
 $main-bg: #fefeff !default;
-$dark-main-bg: lighten($dark, 7.5%) !important;
+$dark-main-bg: color.adjust($dark, $lightness: 7.5%) !important;
 
 // Content padding
 $content-padding-y: 0 !default;
@@ -88,11 +90,11 @@ $main-header-dark-form-control-focused-color: $gray-400 !default;
 $main-header-dark-form-control-border-color: $gray-600 !default;
 $main-header-dark-form-control-focused-border-color: $gray-600 !default;
 $main-header-dark-placeholder-color: rgba($white, .6) !default;
-$main-header-light-form-control-bg: darken($gray-200, 5%) !default;
-$main-header-light-form-control-focused-bg: darken($gray-200, 7.5%) !default;
+$main-header-light-form-control-bg: color.adjust($gray-200, $lightness: -5%) !default;
+$main-header-light-form-control-focused-bg: color.adjust($gray-200, $lightness: -7.5%) !default;
 $main-header-light-form-control-focused-color: $gray-400 !default;
 $main-header-light-form-control-border-color: $gray-400 !default;
-$main-header-light-form-control-focused-border-color: darken($gray-400, 2.5%) !default;
+$main-header-light-form-control-focused-border-color: color.adjust($gray-400, $lightness: -2.5%) !default;
 $main-header-light-placeholder-color: rgb(0 0 0 / 60%) !default;
 
 // MAIN FOOTER
@@ -150,7 +152,7 @@ $control-sidebar-width: $sidebar-width !default;
 // Cards
 // --------------------------------------------------------
 $card-border-color: $gray-100 !default;
-$card-dark-border-color: lighten($gray-900, 10%) !default;
+$card-dark-border-color: color.adjust($gray-900, $lightness: 10%) !default;
 $card-shadow: 0 0 1px rgb(0 0 0 / 12.5%), 0 1px 3px rgb(0 0 0 / 20%) !default;
 $card-title-font-size: 1.1rem !default;
 $card-title-font-size-sm: 1rem !default;
@@ -206,13 +208,13 @@ $button-border-radius-xs: .15rem !default;
 // ELEVATION
 // --------------------------------------------------------
 $elevations: ();
-$elevations: map-merge(
+$elevations: map.merge(
   (
-    1: unquote("0 1px 3px " + rgba($black, .12) + ", 0 1px 2px " + rgba($black, .24)),
-    2: unquote("0 3px 6px " + rgba($black, .16) + ", 0 3px 6px " + rgba($black, .23)),
-    3: unquote("0 10px 20px " + rgba($black, .19) + ", 0 6px 6px " + rgba($black, .23)),
-    4: unquote("0 14px 28px " + rgba($black, .25) + ", 0 10px 10px " + rgba($black, .22)),
-    5: unquote("0 19px 38px " + rgba($black, .3) + ", 0 15px 12px " + rgba($black, .22)),
+    1: string.unquote("0 1px 3px " + rgba($black, .12) + ", 0 1px 2px " + rgba($black, .24)),
+    2: string.unquote("0 3px 6px " + rgba($black, .16) + ", 0 3px 6px " + rgba($black, .23)),
+    3: string.unquote("0 10px 20px " + rgba($black, .19) + ", 0 6px 6px " + rgba($black, .23)),
+    4: string.unquote("0 14px 28px " + rgba($black, .25) + ", 0 10px 10px " + rgba($black, .22)),
+    5: string.unquote("0 19px 38px " + rgba($black, .3) + ", 0 15px 12px " + rgba($black, .22)),
   ),
   $elevations
 );
@@ -246,5 +248,3 @@ $custom-select-dark-background: escape-svg($custom-select-dark-indicator) right 
 // ENABLE DARK MODE
 // --------------------------------------------------------
 $enable-dark-mode: true !default;  // requires `@import "variables-alt";`
-
-//
