--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_custom-forms.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_custom-forms.scss
@@ -1,13 +1,13 @@
-//
 // Mixins: Custom Forms
-//
+
+@use "sass:color";
 
 // Custom Switch Variant
 @mixin custom-switch-variant($name, $color) {
   &.custom-switch-off-#{$name} {
     .custom-control-input ~ .custom-control-label::before {
       background-color: #{$color};
-      border-color: darken($color, 20%);
+      border-color: color.adjust($color, $lightness: -20%);
     }
 
     .custom-control-input:focus ~ .custom-control-label::before {
@@ -15,14 +15,14 @@
     }
 
     .custom-control-input ~ .custom-control-label::after {
-      background-color: darken($color, 25%);
+      background-color: color.adjust($color, $lightness: -25%);
     }
   }
 
   &.custom-switch-on-#{$name} {
     .custom-control-input:checked ~ .custom-control-label::before {
       background-color: #{$color};
-      border-color: darken($color, 20%);
+      border-color: color.adjust($color, $lightness: -20%);
     }
 
     .custom-control-input:checked:focus ~ .custom-control-label::before {
@@ -30,7 +30,7 @@
     }
 
     .custom-control-input:checked ~ .custom-control-label::after {
-      background-color: lighten($color, 30%);
+      background-color: color.adjust($color, $lightness: 30%);
     }
   }
 }
@@ -58,7 +58,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
 
@@ -66,7 +66,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
 
@@ -74,7 +74,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
   }
@@ -114,12 +114,12 @@
     }
 
     &:focus:not(:checked) ~ .custom-control-label::before {
-      border-color: lighten($color, 25%);
+      border-color: color.adjust($color, $lightness: 25%);
     }
 
     &:not(:disabled):active ~ .custom-control-label::before {
-      background-color: lighten($color, 35%);
-      border-color: lighten($color, 35%);
+      background-color: color.adjust($color, $lightness: 35%);
+      border-color: color.adjust($color, $lightness: 35%);
     }
   }
 }
