--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_bootstrap-switch.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_bootstrap-switch.scss
@@ -7,6 +7,8 @@
   * @license MIT
   */
 
+@use "sass:color";
+
 $bootstrap-switch-border-radius: $btn-border-radius;
 $bootstrap-switch-handle-border-radius: .1rem;
 
@@ -122,7 +124,7 @@ $bootstrap-switch-handle-border-radius: .1rem;
     .bootstrap-switch-handle-off,
     .bootstrap-switch-label {
       font-size: 1.25rem;
-      line-height: 1.3333333rem;
+      line-height: 1.3333rem;
       padding: .3rem .5rem;
     }
   }
@@ -180,9 +182,9 @@ $bootstrap-switch-handle-border-radius: .1rem;
 
     .bootstrap-switch-handle-off.bootstrap-switch-default,
     .bootstrap-switch-handle-on.bootstrap-switch-default {
-      background-color: lighten($dark, 2.5%);
+      background-color: color.adjust($dark, $lightness: 2.5%);
       color: $white;
-      border-color: lighten($dark, 7.5%);
+      border-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     .bootstrap-switch-handle-on,
