--- a/EMS/admin-ui-bundle/assets/css/core/components/json_menu_nested.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/json_menu_nested.scss
@@ -90,7 +90,11 @@
         padding: var(--jmn-gap);
         column-gap: var(--jmn-gap);
         flex-shrink: 0;
-        &:first-child { justify-content: flex-start; flex-shrink: 1; }
+
+        &:first-child {
+          justify-content: flex-start;
+          flex-shrink: 1;
+        }
     }
 
     .jmn-column {
@@ -139,14 +143,14 @@
         background-color: white;
     }
 
-    .jmn-dropdown { @include iconAfter("\f0d7"); }
-    .jmn-dropdown-add { @include iconBefore("\f067"); }
-    .jmn-dropdown-more { @include iconBefore("\f142", 0); }
+    .jmn-dropdown { @include icon-after("\f0d7"); }
+    .jmn-dropdown-add { @include icon-before("\f067"); }
+    .jmn-dropdown-more { @include icon-before("\f142", 0); }
 
     .jmn-btn-move {
         cursor: move;
 
-        @include iconBefore("\f047");
+        @include icon-before("\f047");
     }
 
     .jmn-btn-collapse {
